--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "eb8e4eee-5039-4704-afa3-cab2cd983f61"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
